Game logic modified

--- a/index.html
+++ b/index.html
@@ -21,6 +21,10 @@
             <div class="box" id="box9">9</div>
         </div>
 
+        <div class="winstatement hidden" id = "winner">
+            <h2>Player Won!!</h2>
+        </div>
+
         <div class="button">
             <button type="button" id = "reset_btn">Reset</button>
         </div>
